@@ -1,5 +1,9 @@
 2022-12-03  Bart Schaefer  <schaefer@zsh.org>
 
+	* Philippe Altherr: 51071: Src/exec.c, Test/C03traps.ztst: fix
+	ERR_RETURN when a function using && / || is called within another
+	statement using && / ||
+
 	* Philippe Altherr: 51001: Src/exec.c, Src/loop.c,
 	Test/C03traps.ztst: adjust handling of ERR_EXIT to more closely
 	align with POSIX and with other shells; add corresponding tests
